--- a/manutencao-veiculo/src/main/resources/application.properties
+++ b/manutencao-veiculo/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-#spring.mvc.view.prefix: /WEB-INF/jsp/
-#spring.mvc.view.suffix: .jsp
-#welcome.message: Hello Impacta!
-
 logging.level.web=TRACE
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
