--- a/manutencao-veiculo/pom.xml
+++ b/manutencao-veiculo/pom.xml
@@ -40,10 +40,15 @@
 			</exclusions>
 		</dependency>
 		
-		<dependency>
+<!-- 		<dependency>
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
 		    <scope>runtime</scope>
+		</dependency> -->
+		
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
 		</dependency>
 	</dependencies>
 
