--- a/manutencao-veiculo/src/main/resources/application.properties
+++ b/manutencao-veiculo/src/main/resources/application.properties
@@ -1,12 +1,26 @@
 logging.level.web=TRACE
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+## MySQL
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.datasource.url=jdbc:mysql://localhost/manutencao?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver  
+
+## ESTRATEGIA PARA CRIACAO DE TABELAS
+spring.jpa.hibernate.ddl-auto=create
+
+## MOSTRAR COMANDOS SQL
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#`hibernate_sequence' doesn't exist
+spring.jpa.hibernate.use-new-id-generator-mappings=false
