--- a/projeto-manutencao-veiculo/backend/src/main/resources/application.properties
+++ b/projeto-manutencao-veiculo/backend/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.password=
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver  
 
 ## ESTRATEGIA PARA CRIACAO DE TABELAS
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 ## MOSTRAR COMANDOS SQL
 spring.jpa.properties.hibernate.show_sql=true
