migracao para nuvem

--- a/projeto-manutencao-veiculo/backend/src/main/resources/application.properties
+++ b/projeto-manutencao-veiculo/backend/src/main/resources/application.properties
@@ -8,9 +8,9 @@ logging.level.web=TRACE
 
 ## MySQL
 #spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://localhost/manutencao?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://pwms.com.br/waisoc_teste?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=waisoc_teste
+spring.datasource.password=waisoc_teste
 
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver  
 
