--- a/projeto-manutencao-veiculo/backend/src/main/resources/application.properties
+++ b/projeto-manutencao-veiculo/backend/src/main/resources/application.properties
@@ -11,6 +11,7 @@ logging.level.web=TRACE
 spring.datasource.url=jdbc:mysql://localhost:3306/test?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver  
 
