--- a/projeto-manutencao-veiculo/backend/pom.xml
+++ b/projeto-manutencao-veiculo/backend/pom.xml
@@ -76,6 +76,13 @@
 			<artifactId>jaxb-api</artifactId>
 			<version>2.3.1</version>
 		</dependency>
+		
+		<!--
+		 <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		-->
 
 	</dependencies>
 
